<resources>
    <string name="app_name">RMASpirala3</string>
    <string name="dDodajKategoriju">Dodaj kategoriju</string>
    <string name="dPretraga">Pretraga</string>
    <string name="dDodajKnjigu">Dodaj knjigu</string>
    <string name="tekstPretraga">Tekst pretraga</string>
    <string name="dUpisiknjigu">Upiši knjigu</string>
    <string name="dNadjisliku">Nađi sliku</string>
    <string name="dPonisti">Poništi</string>
    <string name="dPovratak">Povratak</string>
    <string name="dKategorije">Kategorije</string>
    <string name="dAutori">Autori</string>
    <string name="title_activity_lista_knjiga_akt">ListaKnjigaAkt</string>

    <string name="nazivKnjige">Naziv knjige:</string>
    <string name="imeAutora">Ime autora:</string>
    <string name="Toast">Knjiga je uspješno dodana</string>
    <string name="broj">Broj knjiga:</string>
    <string name="nePostojiKategorija">Ne postoji niti jedna kategorija</string>
    <string name="unesiteSvePodatke">Morate unijeti sve podatke</string>
    <string name="dodajKnjiguOnline">dodaj knjigu online</string>
    <string name="knjigaPostoji">Knjiga već postoji</string>
    <string name="datumObjavljivanja">Datum objavljivanja:</string>
    <string name="opis">Opis:</string>
    <string name="brojStranica">Broj stranica:</string>
    <string name="preporuci">Preporuči</string>
    <string name="posalji">Pošalji</string>

</resources>
