<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/naslovnaStr"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <EditText
            android:id="@+id/imeAutora"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3" />

        <EditText
            android:id="@+id/nazivKnjige"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true" />

        <Button
            android:id="@+id/dNadjiSliku"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/naslovnaStr"
            android:layout_marginTop="36dp"
            android:text="@string/dNadjisliku" />

        <Button
            android:id="@+id/dUpisiKnjigu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imeAutora"
            android:layout_marginTop="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/dUpisiknjigu" />

        <Spinner
            android:id="@+id/sKategorijaKnjige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/naslovnaStr"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/dPonisti"
            android:layout_width="50dp"
            android:layout_height="47dp"
            android:layout_alignBottom="@+id/dUpisiKnjigu"
            android:layout_alignEnd="@+id/naslovnaStr"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="100dp"
            android:layout_below="@id/imeAutora"
            android:layout_alignRight="@+id/naslovnaStr"
            android:text="@string/dPonisti" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sKategorijaKnjige"
            android:layout_marginTop="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="@string/nazivKnjige" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nazivKnjige"
            android:layout_marginTop="18dp"
            android:text="@string/imeAutora" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>